# flutter-qrcode-plugin

./: Cargo.toml  README.md  pubspec.yaml
lib/: flutter_qrcode_plugin.dart  main.dart
src/: lib.rs  main.rs  plugin.rs  qrcode.rs
