[package]
name = "flutter-qrcode-plugin"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
flutter-engine = { git = "https://github.com/flutter-rs/flutter-rs", features = ["gl-helpers"] }
flutter-plugins = { git = "https://github.com/flutter-rs/flutter-rs" }
flutter-winit = { git = "https://github.com/flutter-rs/flutter-rs" }
glutin = { git = "https://github.com/dvc94ch/glutin", branch = "android" }
image = "0.22.4"
log = "0.4.8"
opencv = "0.29.0"
serde = { version = "1.0.104", features = ["derive"] }
